# lib-open-swiss-maps-sdk

./: .gitignore  .gitmodules  AVAILABLE_LAYERS.md  CHANGELOG.md  Package.resolved  Package.swift  README.md  layers.md
.github/workflows/: android.yml  ios.yml  sonatype-develop.yml  sonatype.yml  swift-format.yml
android/: .gitignore  CMakeLists.txt  README.md  build.gradle  consumer-rules.pro  gradle.properties  settings.gradle
android/docs/: install_readme.md
android/gradle/wrapper/: gradle-wrapper.properties
android/layergps/src/main/: AndroidManifest.xml
android/mapscore/: build.gradle
android/mapscore/src/main/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
android/src/main/assets/wmts/: WMTSCapabilities_2056.xml
android/src/main/java/ch/admin/geo/openswissmaps/: OpenSwissMaps.kt
android/src/main/java/ch/admin/geo/openswissmaps/networking/: RequestUtils.kt
android/src/main/java/ch/admin/geo/openswissmaps/util/: SwisstopoMapRenderHelper.kt  SwisstopoMapViewInterface.kt  SwisstopoOffscreenMapRenderer.kt
android/src/main/java/ch/admin/geo/openswissmaps/view/: SwisstopoMapView.kt
android/src/main/res/values/: attrs.xml
bridging/android/java/ch/admin/geo/openswissmaps/shared/: OpenSwissMapsSharedModule.kt
bridging/android/java/ch/admin/geo/openswissmaps/shared/layers/: SwisstopoLayerFactory.kt
bridging/android/java/ch/admin/geo/openswissmaps/shared/layers/config/: SwisstopoLayerType.kt  SwisstopoTiledLayerConfigFactory.kt
bridging/android/jni/: NativeOpenSwissMapsSharedModule.cpp  NativeOpenSwissMapsSharedModule.h
bridging/android/jni/layers/: NativeSwisstopoLayerFactory.cpp  NativeSwisstopoLayerFactory.h
bridging/android/jni/layers/config/: NativeSwisstopoLayerType.h  NativeSwisstopoTiledLayerConfigFactory.cpp  NativeSwisstopoTiledLayerConfigFactory.h
bridging/ios/: STSDKOpenSwissMapsSharedModule+Private.h  STSDKOpenSwissMapsSharedModule+Private.mm  STSDKOpenSwissMapsSharedModule.h  STSDKSwisstopoLayerFactory+Private.h  STSDKSwisstopoLayerFactory+Private.mm  STSDKSwisstopoLayerFactory.h  STSDKSwisstopoLayerType+Private.h  STSDKSwisstopoLayerType.h  STSDKSwisstopoTiledLayerConfigFactory+Private.h  STSDKSwisstopoTiledLayerConfigFactory+Private.mm  STSDKSwisstopoTiledLayerConfigFactory.h
djinni/: Makefile  open_swiss_maps.djinni  run_djinni.sh
djinni/layers/: layers.djinni
djinni/layers/config/: layer_configs.djinni
djinni/yaml/: open_swiss_maps_shared_module.yaml  swisstopo_layer_factory.yaml  swisstopo_layer_type.yaml  swisstopo_tiled_layer_config_factory.yaml
ios/: README.md  SwisstopoCapabilitiesResource.swift  SwisstopoMapView.swift  SwisstopoTextureLoader.swift  layers.md
ios/docs/: install_readme.md
ios/resources/wmts/: WMTSCapabilities_2056.xml
shared/public/: OpenSwissMapsSharedModule.h  SwisstopoLayerFactory.h  SwisstopoLayerType.h  SwisstopoTiledLayerConfigFactory.h  SwisstopoTiledLayerConfigHelper.h
shared/src/: OpenSwissMapsSharedModule.cpp
shared/src/layers/: SwisstopoLayerFactory.cpp
shared/src/layers/config/: SwisstopoTiledLayerConfigFactory.cpp  SwisstopoTiledLayerConfigHelper.cpp  SwisstopoTiledLayerConfigHelper.h
